--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "bundle/vim-endwise"]
 	path = bundle/vim-endwise
 	url = git://github.com/tpope/vim-endwise.git
+[submodule "bundle/graphviz"]
+	path = bundle/graphviz
+	url = https://github.com/wannesm/wmgraphviz.vim.git
