--- a/.gitmodules
+++ b/.gitmodules
@@ -18,10 +18,10 @@
 	url = git://github.com/tpope/vim-endwise.git
 [submodule "bundle/graphviz"]
 	path = bundle/graphviz
-	url = https://github.com/wannesm/wmgraphviz.vim.git
+	url = git://github.com/wannesm/wmgraphviz.vim.git
 [submodule "bundle/vim-coffee-script"]
 	path = bundle/vim-coffee-script
 	url = git://github.com/kchmck/vim-coffee-script.git
 [submodule "bundle/slime"]
 	path = bundle/slime
-	url = https://github.com/jpalardy/vim-slime.git
+    url = git://github.com/jpalardy/vim-slime.git
